--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,15 @@
 server.port = 8082
 debug=true
-# DA ELIMINARE ##
+
 spring.thymeleaf.cache=false
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.hibernate.use-new-id-generator-mappings= false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/my_photos
+spring.datasource.url=jdbc:mysql://localhost:3306/myDb
 spring.datasource.username=root
 spring.datasource.password=pass
-## ONION INFO ##
-orion.url=http://localhost:1026/ngsi-ld/v1/
+
 ## IDRA INFO ##
 idra.basepath=http://localhost:8080/Idra/api/v1/
