--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port = 8082
 debug=true
-
 spring.thymeleaf.cache=false
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.show_sql = true
@@ -12,4 +11,4 @@ spring.datasource.username=root
 spring.datasource.password=pass
 
 ## IDRA INFO ##
-idra.basepath=http://localhost:8080/Idra/api/v1/
+idra.basepath=http://localhost:8080
