--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Broker Manager Component</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -20,10 +20,12 @@
 	<packaging>jar</packaging>
 	
 	<dependencies>
+		
+		<!-- 
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
+        </dependency> -->
 	
  		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -41,10 +43,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
+		<!-- 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
+		</dependency>  -->
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -626,10 +629,11 @@
     </exclusions>
 </dependency>
 
-<dependency>
+	   <!-- 
+	   <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
+        </dependency> -->
 	
  		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -647,10 +651,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
+		<!-- 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
+		</dependency> -->
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
