--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,12 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		<!-- 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency>
+		</dependency>  -->
 
 
 
@@ -163,11 +164,12 @@
 			<version>1.2</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
+		<!-- 
 		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 			<version>1.6.1</version>
-		</dependency>
+		</dependency> -->
 		<!-- https://mvnrepository.com/artifact/org.apache.geronimo.specs/geronimo-jta_1.1_spec -->
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
@@ -184,7 +186,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>20.0</version>
+			<version>30.0-jre</version>
 		</dependency>
 
 
@@ -346,7 +348,7 @@
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
-			<version>1.12.1</version>
+			<version>1.14.2</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.vividsolutions/jts -->
 		<dependency>
@@ -393,12 +395,13 @@
 		<!-- <artifactId>mysql-connector-java</artifactId> -->
 		<!-- <version>5.1.6</version> -->
 		<!-- </dependency> -->
-
+		
+		 <!-- 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.39</version>
-		</dependency>
+		</dependency>  -->
 		<!-- https://mvnrepository.com/artifact/au.com.bytecode/opencsv -->
 		<dependency>
 			<groupId>au.com.bytecode</groupId>
@@ -444,7 +447,7 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>2.7</version>
+			<version>2.13.2</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/xml-apis/xml-apis -->
 		<dependency>
@@ -667,12 +670,13 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		<!-- 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
-		</dependency>
-
+		</dependency>  -->
+ 
 <dependency>
     <groupId>org.projectlombok</groupId>
     <artifactId>lombok</artifactId>
